<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/start"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Start"
    android:background="@drawable/last_background"
    android:padding="24dp"
    android:gravity="center">

    <TextView
        android:id="@+id/yourResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yourResult"
        android:fontFamily="@font/kanit_semibold"
        android:textAlignment="center"
        android:textColor="@color/goldenOrange"
        android:textSize="50sp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/totalPoints"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/totalPoints"
        android:fontFamily="@font/kanit_bold"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:layout_below="@+id/yourResult"
        android:layout_marginBottom="5dp"
        />

    <TextView
        android:id="@+id/points"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/points"
        android:fontFamily="@font/kanit_regular"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:layout_below="@+id/totalPoints"
        android:layout_marginBottom="10dp"
        />

    <Button
        android:id="@+id/tryAgainbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/lightGreen"
        android:fontFamily="@font/kanit_bold"
        android:text="@string/tryAgainBtn"
        android:textColor="@color/darkGreen"
        android:textSize="26sp"
        android:layout_below="@+id/points"
        android:paddingHorizontal="30dp" />


</RelativeLayout>