<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/start"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Start"
    android:background="@drawable/background"
    android:padding="24dp">


    <ImageView
        android:id="@+id/circle"
        android:src="@drawable/green_circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="272dp"
        android:layout_marginStart="27dp"
        android:contentDescription="@string/circleDescription" />


    <ImageView
        android:id="@+id/localQlogo"
        android:src="@drawable/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="341dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="107dp"
        android:contentDescription="@string/logoDescription" />


    <Button
        android:id="@+id/startbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/lightGreen"
        android:fontFamily="@font/kanit_bold"
        android:text="@string/startBtn"
        android:textColor="@color/darkGreen"
        android:textSize="30sp"
        android:layout_below="@+id/localQlogo"
        android:paddingHorizontal="30dp" />


</RelativeLayout>